# loginprocessor

./: .gitignore  CHANGELOG.txt  LICENCE.txt  README.md  pyproject.toml  setup.cfg
loginprocessor/: __init__.py  loginprocessor.py
test_serv/: test_serveur.py
tests/: test_loginprocessor.py
