[metadata]
name = loginprocessor
version = attr: src.VERSION
description = BaseHandler implementation for login forms
long_description = file: README.md, CHANGELOG.txt, LICENSE.txt
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
packages = loginprocessor
install_requires =
    python_version >= "3.5"
